--- a/index.html
+++ b/index.html
@@ -17,10 +17,17 @@
                 
             </div>
             <div class="input_box">
-                <label>password</label>
+                <label>Password</label>
                 <input type="password" class="password" required>
                
             </div>
+            <div class="password_checkbox"><input type="checkbox">
+                <p>Show password</p>
+            </div>
+            <div class="forget_password">
+                <a href="#">Forgot Password</a>
+            </div>
+            <button class="login" type="submit">Login</button>
         </div>
     </div>
 </body>
