--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <a href="#">Forgot Password</a>
             </div>
             <button class="login" type="submit">Login</button>
+            <div class="signup_link"><a href="#">Don't have an Account ?</a></div>
         </div>
     </div>
 </body>
